--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <h1>我叫<span id="myname"></span></h1>
-    <p>我的学号是<span id="studentnumber">18002090143</span>
+    <p>我的学号是<span id="studentnumber"></span>
     </p>
     <img src="64EFS71V05RQ0001.jpg" style="border-radius:10px 20px 40px 80px">;
     <img src="matrix.png">
